--- a/config/samples/cache_v1alpha1_redisms.yaml
+++ b/config/samples/cache_v1alpha1_redisms.yaml
@@ -2,6 +2,9 @@ apiVersion: cache.mercury200hg.com/v1alpha1
 kind: RedisMS
 metadata:
   name: redisms-sample
+  k8s-app: redisms
 spec:
   # Add fields here
-  foo: bar
+  replicas: 3
+  image: redis:5.0.6
+
